--- a/day3/prac2/docker-compose.yml
+++ b/day3/prac2/docker-compose.yml
@@ -1,1 +1,34 @@
-# 코드를 추가해주세요
+version: "3.9"
+
+services:
+  redis:
+    image: redis:7
+    container_name: redis-server
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 40s
+      start_interval: 5s
+
+  flask-app:
+    image: python:3.11-slim
+    container_name: flask-app
+    depends_on:
+      redis:
+        condition: service_healthy
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./app:/app
+    working_dir: /app
+    command: sh -c "pip install flask redis && python app.py"
+
+volumes:
+  redis-data:
+
